appId: com.youngzin.ttokttak
---
- tapOn: "목록|Items"
- tapOn: "일정 추가|Add item"
- tapOn:
    id: "schedule-title"
- inputText: ${TITLE}
- tapOn:
    id: "schedule-description"
- inputText: ${DESCRIPTION}
- swipe:
    start: "95%,45%"
    end: "95%,25%"
    duration: 300
- scrollUntilVisible:
    element:
      text: "한 번|Once"
    direction: DOWN
- tapOn: "한 번|Once"
- tapOn:
    id: "schedule-submit"
- extendedWaitUntil:
    visible: "${TITLE} 상세 보기|View ${TITLE} details"
    timeout: 30000
